# maskerad_stack_allocator

./: .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README_CRATE.md  appveyor.yml
benches/: speed_comparison.rs
src/: allocation_error.rs  allocator_hub.rs  double_buffered_allocator.rs  double_buffered_allocator_copy.rs  double_ended_allocator.rs  double_ended_allocator_copy.rs  double_ended_memory_chunk.rs  errors.rs  lib.rs  memory_chunk.rs  pool_allocator.rs  pool_allocator_copy.rs  pool_item.rs  shared_ptr.rs  stack_allocator.rs  stack_allocator_copy.rs  unique_ptr.rs  utils.rs
src/pools/: mod.rs  pool_allocator.rs  pool_item.rs
src/smart_pointers/: mod.rs  shared_ptr.rs  unique_ptr.rs
src/stacks/: double_buffered_allocator.rs  double_ended_allocator.rs  mod.rs  stack_allocator.rs
