[package]
name = "maskerad_stack_allocator"
version = "1.0.1"
authors = ["Maskerad developers - <maskerad-rs.organization@protonmail.com>"]
description = "A stack-based allocator, for contiguous allocation and memory fragmentation prevention."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/maskerad_stack_allocator"
keywords = ["memory-allocator", "stack-allocator"]
categories = ["memory-management", "game-engines", "data-structures"]
readme = "README_CRATE.md"

[badges]

appveyor = { repository = "Malkaviel/maskerad-stack-allocator", branch = "master", service = "github" }
travis-ci = { repository = "Maskerad-rs/maskerad_stack_allocator", branch = "master" }
is-it-maintained-issue-resolution = { repository = "Maskerad-rs/maskerad_stack_allocator" }
is-it-maintained-open-issues = { repository = "Maskerad-rs/maskerad_stack_allocator" }
maintenance = { status = "actively-developed" }

[dependencies]

[dev-dependencies]
bencher = "0.1.4"
time = "0.1.38"

[[bench]]
name = "speed_comparison"
harness = false
